# Manipulateur-Pdf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  plan-md-to-pdf.md  uninstall.ps1
.claude/: settings.local.json
pdftool-cli/: Cargo.toml
pdftool-cli/src/: main.rs
pdftool-core/: Cargo.toml
pdftool-core/src/: compress.rs  convert.rs  extract.rs  lib.rs  md_to_pdf.rs  pdf_to_md.rs  text_extract.rs
scripts/: package.ps1  setup-ghostscript.ps1  setup-pandoc.ps1
src/: cli.rs  compress.rs  convert.rs  extract.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
